--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.3",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
     "next": "^15.2.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
