--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
+    "ioredis": "^5.6.0",
     "next": "^15.2.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
